<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    >

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="412dp"
        android:layout_marginTop="126dp"
        android:layout_marginBottom="200dp"
        android:background="#00F10303"
        android:backgroundTint="#ADCDDC39"
        android:backgroundTintMode="screen"
        android:translationY="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pressureValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="272dp"
        android:layout_marginEnd="60dp"
        android:text="@string/txtSea"
        android:translationX="30dp"
        android:translationY="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblLat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="160dp"
        android:text="@string/lblLat"
        android:translationY="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="32dp"
        android:text="@string/lblTime"
        android:translationY="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblTemp" />

    <TextView
        android:id="@+id/lblLong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="32dp"
        android:text="@string/lblLong"
        android:translationY="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblLat" />

    <TextView
        android:id="@+id/lblSea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="32dp"
        android:text="@string/lblSea"
        android:translationY="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblLong" />

    <TextView
        android:id="@+id/lblWDir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="32dp"
        android:text="@string/lblWDir"
        android:translationY="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblSea" />

    <TextView
        android:id="@+id/lblWSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#3F51B5"
        android:text="@string/lblWSpeed"
        android:translationY="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblWDir" />

    <TextView
        android:id="@+id/lblTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="32dp"
        android:text="@string/lblTemp"
        android:translationY="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblWSpeed" />

    <TextView
        android:id="@+id/tempValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="60dp"
        android:text="@string/txtTemp"
        android:translationX="30dp"
        android:translationY="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/speedValue" />

    <TextView
        android:id="@+id/timeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="60dp"
        android:text="@string/txtTime"
        android:translationX="30dp"
        android:translationY="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tempValue" />

    <TextView
        android:id="@+id/speedValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="60dp"
        android:text="@string/txtWSpeed"
        android:translationX="30dp"
        android:translationY="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/directionValue" />

    <TextView
        android:id="@+id/directionValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="60dp"
        android:text="@string/txtWDir"
        android:translationX="30dp"
        android:translationY="20dp"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/pressureValue" />

    <EditText
        android:id="@+id/txtLat"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="30dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:backgroundTint="#000000"
        android:backgroundTintMode="add"
        android:ems="10"
        android:hint="@string/txtLat"
        android:inputType="numberDecimal|numberSigned"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:translationY="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtLong"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="30dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/txtLong"
        android:inputType="numberDecimal|numberSigned"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:translationY="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLat" />

    <ImageView
        android:id="@+id/weatherImage"
        android:layout_width="131dp"
        android:layout_height="122dp"
        android:contentDescription="@string/imgDesc"
        android:src="@drawable/clear_day"
        android:translationY="16dp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="158dp"
        android:layout_height="58dp"
        android:background="#CCDC38"
        android:text="@string/btnUpdate"
        android:textColor="@color/black"
        android:translationY="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />


</androidx.constraintlayout.widget.ConstraintLayout>